# memmgr

./: .gitignore  CMakeLists.txt  Makefile
include/: memmgr.h
src/: memmgr.c
test/: test_memmgr.c
